--- a/src/css/imgSlider.css
+++ b/src/css/imgSlider.css
@@ -1,11 +1,48 @@
 /* Slider container */
+/* Slider container */
 .slider-container {
-    top:100px;
-    position: relative;
-    width: 100%;
-    height: 100vh; /* Full height of the viewport */
-    overflow: hidden;
+  top: 100px;
+  position: relative;
+  width: 100%;
+  height: 100vh; /* Full height of the viewport */
+  overflow: hidden;
+}
+
+/* Style for the images */
+.slider-image {
+  width: 100%;
+
+  object-fit: cover;
+  filter: blur(5px); /* Blur effect */
+}
+
+
+
+@media (max-width: 768px) {
+  .slider-image{
+    height: 700px;
   }
+}
+
+@media (max-width: 576px) {
+  .slider-image{
+    height: 700px; /* Smaller height for mobile screens */
+  }
+}
+
+/* Text Styling remains unchanged */
+.slider-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  text-align: center;
+  animation: textFadeIn 1.5s ease-in-out forwards; /* Apply the animation */
+  opacity: 0; /* Initial state for animation */
+  z-index: 2; /* Position above the overlay */
+}
+
   
   /* Style for individual slides */
   .slide {
@@ -15,12 +52,7 @@
   }
   
   /* Style for the images */
-  .slider-image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    filter: blur(5px); /* Blur effect */
-  }
+
   .slide::before {
     content: "";
     position: absolute;
@@ -34,17 +66,7 @@
   
   
   /* Text Styling */
-  .slider-text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-    text-align: center;
-    animation: textFadeIn 1.5s ease-in-out forwards; /* Apply the animation */
-    opacity: 0; /* Initial state for animation */
-    z-index: 2; /* Position above the overlay */
-  }
+ 
   
   /* Animation for text */
   @keyframes textFadeIn {
